Actor får nå kort fra chosen